# dict-counter

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  test_huge.sh
src/: CMakeLists.txt  main.cpp
src/dict/: make_dict.cpp  make_dict.hpp
test/: CMakeLists.txt  test.cpp
